# PomodoroTimer

./: CMakeLists.txt  DialPage.qml  Main.qml  MinutesSelector.qml  MyDial.qml  TimeSelectorPage.qml  dialcontroller.cpp  dialcontroller.h  itemmodel.cpp  itemmodel.h  main.cpp  resources.qrc  testDial.qml  timer_controller.cpp
include/: ListItem.h  db_manager.h  i_db_manager.h  itemmodel.h  timer_controller.h
src/: db_manager.cpp  dialcontroller.cpp  itemmodel.cpp  main.cpp  timer_controller.cpp
tests/: CMakeLists.txt
ui/: DialPage.qml  Main.qml  MinutesSelector.qml  MyDial.qml  PopupMessage.qml  TimeSelectorPage.qml
